--- a/Programmania/wwwroot/css/Disciplines.css
+++ b/Programmania/wwwroot/css/Disciplines.css
@@ -68,7 +68,7 @@ html, body {
 .course__img {
     width: 100%;
     height: 500px;
-    margin-right: 200px;
+    margin: 0 auto;
 }
 
     .course__img img {
@@ -106,6 +106,7 @@ html, body {
     .discipline:hover {
         opacity: 0.7;
         transform: scale(1.1);
+        cursor: pointer;
     }
 
 .discipline_selected {
