--- a/Programmania/Views/Home/Profile.cshtml
+++ b/Programmania/Views/Home/Profile.cshtml
@@ -1,3 +1,6 @@
+@using Programmania.ViewModels;
+@model Programmania.ViewModels.UserProfileVM
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,13 +9,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
-    <link rel="stylesheet" href="~/css/profile.css">
+
+    <link rel="stylesheet" href="~/css/components/modal.css" />
+    <link rel="stylesheet" href="~/css/HamburgerMenu.css" />
+    <link rel="stylesheet" href="~/css/loading-bar.min.css">
+    <link rel="stylesheet" href="~/css/profile.css" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="~/css/HamburgerMenu.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" href="~/css/loading-bar.min.css">
     <script src="~/js/loading-bar.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="~/js/util/burger.js"></script>
@@ -35,33 +40,16 @@
                     </div>
                     <hr />
 
-                    <div class="profile-info__item">
-                        <h3>Email:</h3>
-                        <p>John123@gmail.com</p>
-                    </div>
-                    <hr />
-
-                    <button id="profileModalShow" class="btn btn-primary profile-info__change">Change profile data</button>
-
-                    <div class="modal" id="profileModal">
-                        <div class="modal-content" style="width: 500px">
-                            <span class="close">&times;</span>
-
-                            <form name="loginForm" id="loginForm">
-                                <div class="form-group">
-                                    <label id="emailLabelLog" for="emailInputLog">Email: </label>
-                                    <input id="emailInputLog" type="email" class="form-control" placeholder="email" name="emailInput" />
-                                </div>
-
-                                <div class="form-group">
-                                    <label id="passwordLabelLog" for="passwordInputLog">Password: </label>
-                                    <input id="passwordInputLog" type="password" class="form-control" placeholder="password" name="passwordInput" />
-                                </div>
-                                <input type="button" id="loginBtnOut" class="btn btn-success" name="loginBtn" value="Login" />
-                            </form>
+                    @if (Model.IsOwned)
+                    {
+                        <div class="profile-info__item">
+                            <h3>Email:</h3>
+                            <p>John123@gmail.com</p>
                         </div>
-                    </div>
+                        <hr />
 
+                        <button id="enterProfileModal" class="btn btn-primary profile-info__change">Change profile data</button>
+                    }
                 </div>
             </div>
 
@@ -79,13 +67,13 @@
 
                 <div class="tabs-container">
                     <div class="tab">
-                        <button class="tablinks" onclick="openContent(event, 'user-info')">User info</button>
+                        <button class="tablinks" onclick="openContent(event, 'userInfo')">User info</button>
                         <button class="tablinks" onclick="openContent(event, 'games')">Games</button>
                         <button class="tablinks" onclick="openContent(event, 'achievments')">Achievments</button>
                     </div>
 
                     <!-- Tab content -->
-                    <div id="user-info" class="tabcontent">
+                    <div id="userInfo" class="tabcontent">
                         <div class="profile-info">
                             <div class="profile-info__item">
                                 <h3>XP:</h3>
@@ -121,10 +109,35 @@
                 </div>
             </div>
         </div>
+
+        @if (Model.IsOwned)
+        {
+            <div class="modal" id="profileModal">
+                <div class="modal-content" style="width: 500px">
+                    <span id="closeProfileModal" class="close">&times;</span>
+
+                    <form name="loginForm" id="loginForm">
+                        <div class="form-group">
+                            <label id="nicknameLabel" class="modal__label">Nickname: </label>
+                            <input id="nicknameInput" class="form-control modal__input" placeholder="nickname" />
+                        </div>
+
+                        <div class="form-group">
+                            <label id="fileLabel" class="modal__label">Avatar: </label>
+                            <input id="fileInput" class="form-control" />
+                        </div>
+
+                        <input type="button" id="profileChangeBtn" class="btn btn-success modal__close" value="Change" />
+                    </form>
+                </div>
+            </div>
+        }
     </main>
 
-    <script src="~/js/profile.js"></script>
     <script src="~/js/util/tabs.js"></script>
+    <script src="~/js/util/openModal.js"></script>
+    <script src="~/js/util/cropImage.js"></script>
+    <script src="~/js/profile.js"></script>
 </body>
 
 </html>
